--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     </div>
   </header>
 
-  <main>
+  <main class="main">
     <div class="eyecatch">
       <h1>機械ではできない仕事を</h1>
     </div>
@@ -50,7 +50,7 @@
           <h2>Web制作事業</h2>
           <h3>コーチングのミッション</h3>
           <p>ユーザーが求める物を分析し、ユーザビリティを備えた最適なサイトを提供。建設業から美容、ブライダル、飲食店まで多種多様な業種の制作実績があります</p>
-          <a href="#">サービス詳細</a>
+          <a href="#" class="service-link">サービス詳細</a>
         </div>
       </div>
 
@@ -60,15 +60,64 @@
           <h2>Web制作事業</h2>
           <h3>コーチングのミッション</h3>
           <p>ユーザーが求める物を分析し、ユーザビリティを備えた最適なサイトを提供。建設業から美容、ブライダル、飲食店まで多種多様な業種の制作実績があります</p>
-          <a href="#">サービス詳細</a>
+          <a href="#" class="service2-link">サービス詳細</a>
         </div>
       </div>
+    </div>
+
+    <div id="company-recruit">
+      <div class="company-recruit-wrap">
+        <div class="company">
+          <a href="#"><img src="./img/company.jpeg" alt="">
+            <span>
+              <h1>company</h1>
+              <p>会社概要</p>
+            </span>
+          </a>
+        </div>
+        <div class="recruit">
+          <a href="#"><img src="./img/recruit.jpg" alt="">
+            <span>
+              <h1>recruit</h1>
+              <p>採用情報</p>
+            </span>
+          </a>
+        </div>
+      </div>
+    </div>
+
+        <a href="#" class="faq">
+          <span>
+            <h1>FAQ</h1>
+            <p>良くある質問</p>
+          </span>
+        </a>
+
+    <div id="contact">
+      <h1>contact</h1>
+      <h2>お問い合わせ</h2>
+      <h3>お気軽にお問い合わせください。</h3>
+      <p>資料請求・お問い合わせなどなんでも気軽にお問い合わせください。お仕事のご連絡もお問い合わせページに飛んでいただいて、入力フォームにご記入お願いいたします。</p>
+      <a href="#">お問い合わせへ</a>
     </div>
   </main>
 
   <footer class="footer">
-
+    <div class="footer-wrap">
+      <h1 class="footer-logo">estra inc.</h1>
+      <nav class="footer-nav">
+        <ul>
+          <li><a href="#">home</a></li>
+          <li><a href="#">about</a></li>
+          <li><a href="#">service</a></li>
+          <li><a href="#">works</a></li>
+          <li><a href="#">price</a></li>
+          <li><a href="#">contact</a></li>
+        </ul>
+      </nav>
+    </div>
+    <p class="copyright">Copyright 2019 estra inc. All Rights Reserved.</p>
   </footer>
 </body>
 
-</html>l
+</html>
